# opengltest

./: CMakeLists.txt
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: fragment.glsl  main.cpp  vertex.glsl
